Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes for 1.1 [2005-12-22] #14429 "Xmas release"
==================================================

 o #14422 Changed ClusterManager to be configured in xmlBlasterPlugins.xml
   Please update xmlBlasterPlugins.xml
   Removed the now obsolete '-cluster true' parameter.
   Changed protocol plugins to startup in runlevel 4 instead of 3

 o #14419 Fixed reflection code for JDK 1.5 in XML dom.write()

 o #14412 C client library: Changed responseTimeout from one minute to unlimited

 o #14408 Removed parser.jar and jaxp.jar as we dropped support for JDK 1.3
   Removed collections.jar (needed for JDK 1.1)

 o #14379 added DbWriter: see http://www.xmlblaster.org/xmlBlaster/doc/requirements/contrib.dbwriter.html

 o #14354 XmlBlaster native (jutils #14357) logging:
   Added '-maxLogFileLines 50000 -maxLogFileCounter 9' configuration

 o #14338 Email protocol: Fixed memory leak for loop detection code

 o #14337 Changed to have unique JMX name to avoid conflict if multiple plugins are started
   for SocketDriver, SmtpClient and Pop3Driver

 o #14336 Added JMX control for CorbaDriver and XmlRpcDriver

 o #14334 Email protocol: Ported to support multiple requests in one email

 o #14329 Email protocol: Fixed multiple connection loop protection, added simple use case for manual GUI usage

 o #14316 Added setSessionTimeout(long) for admin/JMX access

 o #14307 Bugfix email protocol: Fixed authentication, host/port setting and inline content of SmtpClient.java

 o #14302 Email protocol: Introduced email expiry header 'X-xmlBlaster-ExpiryDate:2005-12-24 16:45:12'
 
 o #14295 BUGFIX: Fixed resetting of SaxParser state, could lead to buggy parsing if previous parse threw an exception
   Had no impact when accessing the server from our Java and C++ client library.
   Thanks to Cyrille for finding this bug
